# STD-Automation-testing-icsecurity

./: .gitignore  README.md  capabilities.json  package-lock.json  package.json  pyproject.toml  test.py
resource/Gantt-pages/: home-gantt.robot  login-gantt.robot
resource/Gantt-pages/case-creator/: case-creator-variables.robot  change-order.robot
resource/mobile-pages/: Tools-section.robot  home-menu.robot  login-kiosk-NA.robot
resource/pages/: login-kiosk-NA.robot
resource/utils/: appiumDriver.robot  capturePage.robot  driver.robot
tests/gantt/: demo-web.robot
tests/inter-con-app/: demo-mobile.robot  login-app-kiosk-no-auth.robot  sample-robot-appium.robot
