[project]
name = "appium-intercon"
version = "0.1.0"
description = ""
authors = [
    {name = "Diego Nava",email = "dnava@icsecurity.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "robotframework (>=7.2.2,<8.0.0)",
    "robotframework-appiumlibrary (>=2.1.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
